--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
         <section class="intro">
             <h2>مرحبًا بك في موقعنا!</h2>
             <p>نحن نقدم محتوى مميز ومتنوع في جميع المجالات. استمتع بتصفح الموقع!</p>
-            <img src="img/welcome.jpg" alt="صورة معبرة">
+            <img src="welcome.jpg" alt="صورة معبرة">
         </section>
 
         <section class="content">
             <div class="card">
                 <h3>القسم الأول</h3>
                 <p>محتوى هذا القسم يركز على تقديم تجارب جديدة ومثيرة.</p>
-                <img src="img/exp.jpg" alt="صورة جميلة">
+                <img src="exp.jpg" alt="صورة جميلة">
             </div>
             <div class="card">
                 <h3>القسم الثاني</h3>
                 <p>هنا نقدم لك أفضل الأدوات والموارد لتطوير مهاراتك.</p>
-                <img src="img/tools.jpg" alt="صورة مميزة">
+                <img src="tools.jpg" alt="صورة مميزة">
             </div>
             <div class="card">
                 <h3>القسم الثالث</h3>
                 <p>محتوى القسم الثالث يقدم دروسًا متعمقة في البرمجة.</p>
-                <img src="img/codeing.jpg" alt="صورة تعليمية">
+                <img src="codeing.jpg" alt="صورة تعليمية">
             </div>
         </section>
     </main>
